# ai-search-course

./: .env-example  README.md  pyproject.toml
app/: main.py
app/document_processing/: document_loader.py  text_chunker.py
app/embeddings/: generator.py
app/response_generative/open_ai/: response_summary_gen.py
app/ui/admin/: file_upload.py
app/ui/user/: query.py
app/vector_store/: indexer.py  qdrant_client.py  query.py
